--- a/AbstraxArtStore/Views/Shared/_LoginPartial.cshtml
+++ b/AbstraxArtStore/Views/Shared/_LoginPartial.cshtml
@@ -19,11 +19,12 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link text-light" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
-        <a class= "btn btn-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class= "btn btn-light" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
             
     </li>
 }
 </ul>
+ 
