--- a/AbstraxArtStore/Views/Shared/_Layout.cshtml
+++ b/AbstraxArtStore/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Shop">Shop</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Buy">Buy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Sell">Sell</a>
@@ -40,11 +40,14 @@
 
                     </ul>
 
+
                 </div>
                 <partial name="_LoginPartial"/>
             </div>
         </nav>
     </header>
+
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
