--- a/AbstraxArtStore/wwwroot/css/site.css
+++ b/AbstraxArtStore/wwwroot/css/site.css
@@ -4,7 +4,7 @@ html {
 
 @media (min-width: 768px) {
   html {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 
@@ -26,6 +26,44 @@ body {
     padding: 2rem;
 }
 
+
+
+
+
+
+
+.search {
+    --padding: 14px;
+
+    width: max-content;
+    display: flex;
+    align-items: center;
+    padding: var(--padding);
+    border-radius: 28px;
+    background:#f6f6f6;
+    width: 1275px;
+
+}
+
+
+.search-input {
+    font-size: 16px;
+    font-family: 'lexend', sans-serif;
+    color:#333333;
+    margin-left: var(--padding);
+    outline: none;
+    border: none;
+    background: transparent;
+    width: 300px;
+}
+
+
+
+
+
+
+
+
 .slider-wrapper {
     position: relative;
     max-width: 70rem;
@@ -40,8 +78,8 @@ body {
     scroll-behavior: smooth;
     box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
     border-radius: 0.5rem;
-    -ms-overflow-style: none; 
-    scrollbar-width: none; 
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
     .slider::-webkit-scrollbar {
@@ -76,5 +114,32 @@ body {
         .slider-nav a:hover {
             opacity: 1;
         }
+
+
+
+
+
+<style >
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
 
 
