--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -28,3 +28,28 @@
         </div>
 </section>
 
+
+<div class="row">
+    <div class="column">
+        <a href="default.asp">
+            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="HTML tutorial" style="width:42px;height:42px;">
+        </a>
+       <h2>Column</h2>
+    </div>
+
+
+    <div class="column">
+        <a href="default.asp">
+            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="HTML tutorial" style="width:42px;height:42px;">
+        </a>
+        <h2>Column</h2>
+    </div>
+
+    <div class="column">
+        <a href="default.asp">
+            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="HTML tutorial" style="width:42px;height:42px;">
+        </a>
+        <h2>Column</h2>
+    </div>
+</div>
+
