--- a/AbstraxArtStore/Views/Shared/_Layout.cshtml
+++ b/AbstraxArtStore/Views/Shared/_Layout.cshtml
@@ -32,10 +32,10 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Sell">Sell</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="About Us">About us</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="About">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Contact Us">Contact Us</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a>
                         </li>
 
                     </ul>
