--- a/AbstraxArtStore/wwwroot/css/site.css
+++ b/AbstraxArtStore/wwwroot/css/site.css
@@ -120,3 +120,22 @@ body {
 
 
 
+
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 15px;
+}
+
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+@media screen and (max-width:600px) {
+    .column {
+        width: 100%;
+    }
