--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -17,9 +17,9 @@
 <section class="container">
     <div class="slider-wrapper">
         <div class="slider">
-            <img id="slide-1" src="https://images.unsplash.com/photo-1622737133809-d95047b9e673?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
-            <img id="slide-2" src="https://images.unsplash.com/photo-1541367777708-7905fe3296c0?q=80&w=2095&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
-            <img id="slide-3" src="https://images.unsplash.com/photo-1501349800519-48093d60bde0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
+            <img id="slide-1" src="https://images.unsplash.com/photo-1622737133809-d95047b9e673?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;"  />
+            <img id="slide-2" src="https://images.unsplash.com/photo-1541367777708-7905fe3296c0?q=80&w=2095&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
+            <img id="slide-3" src="https://images.unsplash.com/photo-1501349800519-48093d60bde0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
         </div>
         <div class="slider-nav">
             <a href="#slide-1"></a>
@@ -32,24 +32,24 @@
 <div class="row">
     <div class="column">
         <a href="default.asp">
-            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="HTML tutorial" style="width:42px;height:42px;">
+            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt= "Small Paintings" style="width:400px;height:400px;">
         </a>
-       <h2>Column</h2>
+        <h2>Small Paintings</h2>
     </div>
 
 
     <div class="column">
         <a href="default.asp">
-            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="HTML tutorial" style="width:42px;height:42px;">
+            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Medium Paintings" style="width:400px;height:400px;">
         </a>
-        <h2>Column</h2>
+        <h2>Medium Paintings</h2>
     </div>
 
     <div class="column">
         <a href="default.asp">
-            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="HTML tutorial" style="width:42px;height:42px;">
+            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Large Paintings" style="width:400px;height:400px;">
         </a>
-        <h2>Column</h2>
+        <h2>Large Paintings</h2>
     </div>
 </div>
 
