--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<div class="text-center">
+
 
  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <form>
@@ -11,6 +11,7 @@
         </div>
     </form>
  </div>
+
 
 
 
@@ -26,20 +27,23 @@
             <a href="#slide-2"></a>
             <a href="#slide-3"></a>
         </div>
+
+        
+  
 </section>
 
 
 <div class="row">
     <div class="column">
-        <a href="default.asp">
-            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt= "Small Paintings" style="width:400px;height:400px;">
+        <a href="Home/Smallpaintings">
+            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"  alt= "Small Paintings" style="width:400px;height:400px;">
         </a>
         <h2>Small Paintings</h2>
     </div>
 
 
     <div class="column">
-        <a href="default.asp">
+        <a href="Home/Mediumpaintings">
             <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Medium Paintings" style="width:400px;height:400px;">
         </a>
         <h2>Medium Paintings</h2>
