--- a/AbstraxArtStore/Views/Shared/_Layout.cshtml
+++ b/AbstraxArtStore/Views/Shared/_Layout.cshtml
@@ -25,9 +25,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Buy">Buy</a>
-                        </li>
+
+                        <div class="dropdown">
+                            <ul class="navbar-nav flex-grow-1">
+                                <button type="button" class="btn btn dropdown-toggle" data-bs-toggle="dropdown">
+                                    Buy
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="Home/Smallpaintings">Small Paintings</a></li>
+                                    <li><a class="dropdown-item" href="Home/Mediumpaintings">Medium Paintings</a></li>
+                                    <li><a class="dropdown-item" href="Home/Largepaintings">Large Paintings</a></li>
+                                </ul>
+                        </div>
+
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Sell">Sell</a>
                         </li>
@@ -39,6 +49,8 @@
                         </li>
                     </ul>
 
+
+                    
 
                 </div>
                 <partial name="_LoginPartial"/>
