--- a/AbstraxArtStore/Views/Shared/_Layout.cshtml
+++ b/AbstraxArtStore/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>    
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -28,11 +28,11 @@
 
                         <div class="dropdown">
                             <ul class="navbar-nav flex-grow-1">
-                                <button type="button" class="btn btn dropdown-toggle" data-bs-toggle="dropdown">
+                                <button type="button" class="btn btn dropdown-toggle-" data-bs-toggle="dropdown">
                                     Buy
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="Home/Smallpaintings">Small Paintings</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Smallpaintings">Small Paintings</a></li>
                                     <li><a class="dropdown-item" href="Home/Mediumpaintings">Medium Paintings</a></li>
                                     <li><a class="dropdown-item" href="Home/Largepaintings">Large Paintings</a></li>
                                 </ul>
