dropdown and round image corners

--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
 <div class="row">
     <div class="column">
         <a href="Home/Smallpaintings">
-            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"  alt= "Small Paintings" style="width:400px;height:400px;">
+            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Small Paintings" class="rounded" style="width:400px;height:400px;">
         </a>
         <h2>Small Paintings</h2>
     </div>
@@ -44,14 +44,14 @@
 
     <div class="column">
         <a href="Home/Mediumpaintings">
-            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Medium Paintings" style="width:400px;height:400px;">
+            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Medium Paintings" class="rounded" style="width:400px;height:400px;">
         </a>
         <h2>Medium Paintings</h2>
     </div>
 
     <div class="column">
         <a href="Home/Largepaintings">
-            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Large Paintings" style="width:400px;height:400px;">
+            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Large Paintings" class="rounded" style="width:400px;height:400px;">
         </a>
         <h2>Large Paintings</h2>
     </div>
