--- a/AbstraxArtStore/Views/Home/Contact.cshtml
+++ b/AbstraxArtStore/Views/Home/Contact.cshtml
@@ -1,6 +1,80 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contact Us";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        input[type=text], select, textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-top: 6px;
+            margin-bottom: 16px;
+            resize: vertical;
+        }
+
+        input[type=submit] {
+            background-color: #000;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+            input[type=submit]:hover {
+                background-color: #000;
+            }
+
+
+    </style>
+</head>
+<body>
+
+    <div class="container p-5 my-5 bg-dark text-white rounded">
+        <h1>Get in touch</h1>
+        <h5>0212584962</h5>
+        <h5>Contact@abstractart.nz</h5>
+    </div>
+
+
+    <div class="container">
+        <form action="/action_page.php">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+            <label for="country">City</label>
+            <select id="city" name="city">
+                <option value="auckland">Auckland</option>
+                <option value="wellington">Wellington</option>
+                <option value="christchurch">Christchurch</option>
+                <option value="hamilton">Hamilton</option>
+                <option value="dunedin">Dunedin</option>
+                <option value="rotorua">Rotorua</option>
+            </select>
+
+            <label for="subject">Subject</label>
+            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+            <input type="submit" value="Send">
+        </form>
+    </div>
+
+</body>
+</html>
