--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -3,24 +3,14 @@
 }
 
 
- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <form>
-        <div class="search">
-            <span class="search-icon material-symbols-outlined">search</span>
-            <input class="search-input" type="search" placeholder="Search"
-        </div>
-    </form>
- </div>
-
-
 
 
 <section class="container">
     <div class="slider-wrapper">
         <div class="slider">
-            <img id="slide-1" src="https://images.unsplash.com/photo-1622737133809-d95047b9e673?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;"  />
-            <img id="slide-2" src="https://images.unsplash.com/photo-1541367777708-7905fe3296c0?q=80&w=2095&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
-            <img id="slide-3" src="https://images.unsplash.com/photo-1501349800519-48093d60bde0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
+            <img id="slide-1" src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?q=80&w=2158&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
+            <img id="slide-2" src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
+            <img id="slide-3" src="https://images.unsplash.com/photo-1534986622832-777a66b043bc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
         </div>
         <div class="slider-nav">
             <a href="#slide-1"></a>
@@ -36,7 +26,7 @@
 <div class="row">
     <div class="column">
         <a href="Home/Smallpaintings">
-            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Small Paintings" class="rounded" style="width:400px;height:400px;">
+            <img src="https://images.unsplash.com/photo-1529590059894-9c3305df5d6b?q=80&w=1994&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Small Paintings" class="rounded" style="width:400px;height:400px;">
         </a>
         <h2>Small Paintings</h2>
     </div>
@@ -44,16 +34,40 @@
 
     <div class="column">
         <a href="Home/Mediumpaintings">
-            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Medium Paintings" class="rounded" style="width:400px;height:400px;">
+            <img src="https://images.unsplash.com/photo-1538448746497-4b4feffb4afb?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Medium Paintings" class="rounded" style="width:400px;height:400px;">
         </a>
         <h2>Medium Paintings</h2>
     </div>
 
     <div class="column">
         <a href="Home/Largepaintings">
-            <img src="https://images.unsplash.com/photo-1618331835717-801e976710b2?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Large Paintings" class="rounded" style="width:400px;height:400px;">
+            <img src="https://images.unsplash.com/flagged/photo-1551373916-bdaddbf4f881?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Large Paintings" class="rounded" style="width:400px;height:400px;">
         </a>
         <h2>Large Paintings</h2>
     </div>
+
+    <div class="container.sm p-5 my-5 bg-dark text-white col-md-4 rounded">
+        <h1>Who Are We</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+
+    <div class="container.sm p-5 my-5 bg-dark text-white col-md-4">
+        <h1>Mission</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+
+    <div class="container.sm p-5 my-5 bg-dark text-white col-md-4 rounded">
+        <h1>Why Abstrax Art?</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+
+
 </div>
 
