--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
 <section class="container">
     <div class="slider-wrapper">
         <div class="slider">
-            <img id="slide-1" src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?q=80&w=2158&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
-            <img id="slide-2" src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
-            <img id="slide-3" src="https://images.unsplash.com/photo-1534986622832-777a66b043bc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
+            <img id="slide-1" src="~/lib/images/photo-1586023492125-27b2c045efd7.png" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
+            <img id="slide-2" src="/lib/images/Couch.png" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
+            <img id="slide-3" src="/lib/images/Couch2.png" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
         </div>
         <div class="slider-nav">
             <a href="#slide-1"></a>
@@ -25,7 +25,7 @@
 <div class="row">
     <div class="column">
         <a href="Home/Smallpaintings">
-            <img src="https://images.unsplash.com/photo-1529590059894-9c3305df5d6b?q=80&w=1994&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Small Paintings" class="rounded" style="width:400px;height:400px;">
+            <img src="/lib/images/Bird.png" alt="Small Paintings" class="rounded" style="width:400px;height:400px;">
         </a>
         <h2>Small Paintings</h2>
     </div>
@@ -33,14 +33,14 @@
 
     <div class="column">
         <a href="Home/Mediumpaintings">
-            <img src="https://images.unsplash.com/photo-1538448746497-4b4feffb4afb?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Medium Paintings" class="rounded" style="width:400px;height:400px;">
+            <img src="/lib/images/Leaf.png" alt="Medium Paintings" class="rounded" style="width:400px;height:400px;">
         </a>
         <h2>Medium Paintings</h2>
     </div>
 
     <div class="column">
         <a href="Home/Largepaintings">
-            <img src="https://images.unsplash.com/flagged/photo-1551373916-bdaddbf4f881?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Large Paintings" class="rounded" style="width:400px;height:400px;">
+            <img src="~/lib/images/Cactus.png" alt="Large Paintings" class="rounded" style="width:400px;height:400px;">
         </a>
         <h2>Large Paintings</h2>
     </div>
