--- a/AbstraxArtStore/Views/Home/About.cshtml
+++ b/AbstraxArtStore/Views/Home/About.cshtml
@@ -4,22 +4,19 @@
 
 <div class="container.sm p-5 my-5 border col-md-4 rounded">
         <h1>Who Are We</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>We are Abstrax Art. A brand striving to promote amazing artwork online for everyone to benefit from. Buy beautiful artwork from a range of talented artists or become the talented artist yourself and sell your own.</p>
     </div>
 
     <div class="container.sm p-5 my-5 border col-md-4 rounded">
         <h1>Mission</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Our mission is to provide high quality unique artwork from local, inspired artists, to the people of New Zealand and maybe beyond.
         </p>
     </div>
 
     <div class="container.sm p-5 my-5 border col-md-4 rounded">
         <h1>Why Abstrax Art?</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Abstrax Art is not just a marketplace, its a home for artists to spread their love for art and spread it to the people of New Zealand. Take control of your art and reach a larger audience at a place where you find people with the same love for art.
         </p>
     </div>
