--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
 <section class="container">
     <div class="slider-wrapper">
         <div class="slider">
-            <img id="slide-1" src="~/lib/images/photo-1586023492125-27b2c045efd7.png" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
-            <img id="slide-2" src="/lib/images/Couch.png" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
-            <img id="slide-3" src="/lib/images/Couch2.png" alt="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" style="width:1200px;height:650px;" />
+            <img id="slide-1" src="~/lib/images/photo-1586023492125-27b2c045efd7.png" alt="slide 1" style="width:1200px;height:650px;" />
+            <img id="slide-2" src="/lib/images/Couch.png" alt="slide 2" style="width:1200px;height:650px;" />
+            <img id="slide-3" src="/lib/images/Couch2.png" alt="slide 3" style="width:1200px;height:650px;" />
         </div>
         <div class="slider-nav">
             <a href="#slide-1"></a>
@@ -47,23 +47,20 @@
 
     <div class="container.sm p-5 my-5 bg-dark text-white col-md-4 rounded">
         <h1>Who Are We</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>We are Abstrax Art. A brand striving to promote amazing artwork online for everyone to benefit from. Buy beautiful artwork from a range of talented artists or become the talented artist yourself and sell your own.</p>
     </div>
 
     <div class="container.sm p-5 my-5 bg-dark text-white col-md-4">
         <h1>Mission</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Our mission is to provide high quality unique artwork from local, inspired artists, to the people of New Zealand and maybe beyond.
         </p>
     </div>
 
     <div class="container.sm p-5 my-5 bg-dark text-white col-md-4 rounded">
         <h1>Why Abstrax Art?</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Abstrax Art is not just a marketplace, its a home for artists to spread their love for art and spread it to the people of New Zealand. Take control of your art and reach a larger audience at a place where you find people with the same love for art.
         </p>
     </div>
 
