--- a/AbstraxArtStore/Views/Home/Privacy.cshtml
+++ b/AbstraxArtStore/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Information about privacy will be placed here, ensuring safety of data, privacy and copyirght laws.</p>
