--- a/AbstraxArtStore/Views/Home/Sell.cshtml
+++ b/AbstraxArtStore/Views/Home/Sell.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>The place to put up a listing and sell your own products will be located here.</p>
