--- a/AbstraxArtStore/Views/Shared/_Layout.cshtml
+++ b/AbstraxArtStore/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div style="width: 100%" class="container">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <form>
@@ -20,7 +20,12 @@
             <input class="search-input" type="search" placeholder="Search"
         </div>
     </form>
+
+
 </div>
+
+
+
 </div>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-black border-bottom box-shadow mb-3">
             <div class="container-fluid">
