--- a/AbstraxArtStore/wwwroot/css/site.css
+++ b/AbstraxArtStore/wwwroot/css/site.css
@@ -34,11 +34,12 @@ body {
 
 .search {
     --padding: 14px;
-
     width: max-content;
     display: flex;
     align-items: center;
     padding: var(--padding);
+    border-style: solid;
+    border-width: 2px;
     border-radius: 28px;
     background:#f6f6f6;
     width: 1275px;
