--- a/AbstraxArtStore/Views/Home/Mediumpaintings.cshtml
+++ b/AbstraxArtStore/Views/Home/Mediumpaintings.cshtml
@@ -1,6 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Medium Paintings";
 }
+
+<head>
+    <style>
+        h1 {
+            text-align:center;
+        }
+    </style>
+</head>
+
 <h1>@ViewData["Title"]</h1>
 
 <p>Medium painting products will be located here.</p>
