--- a/AbstraxArtStore/Views/Home/Smallpaintings.cshtml
+++ b/AbstraxArtStore/Views/Home/Smallpaintings.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿<!DOCTYPE html>
+<html lang="en">
+@{
     ViewData["Title"] = "Small Paintings";
 }
 <head>
@@ -10,4 +12,20 @@
 </head>
 <h1>@ViewData["Title"]</h1>
 
-<p>Small painting products will be located here.</p>
+
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Four Columns</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="column">Column 1</div>
+        <div class="column">Column 2</div>
+        <div class="column">Column 3</div>
+        <div class="column">Column 4</div>
+    </div>
+</body>
+</html>
