--- a/AbstraxArtStore/Views/Home/About.cshtml
+++ b/AbstraxArtStore/Views/Home/About.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "About Us";
 }
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <div class="container.sm p-5 my-5 border     col-md-4 rounded">
         <h1>Who Are We</h1>
