--- a/AbstraxArtStore/Views/Home/Buy.cshtml
+++ b/AbstraxArtStore/Views/Home/Buy.cshtml
@@ -2,5 +2,5 @@
     ViewData["Title"] = "Buy Paintings";
 }
 <h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<p>Buy Paintings</p>
