--- a/AbstraxArtStore/Views/Home/Cart.cshtml
+++ b/AbstraxArtStore/Views/Home/Cart.cshtml
@@ -1,6 +1,120 @@
-﻿@{
+﻿<meta name="viewport" content="width=device-width, initial-scale=1.0">
+@{
     ViewData["Title"] = "Cart";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Information about privacy will be placed here, ensuring safety of data, privacy and copyirght laws.</p>
+
+<div id='form-wrapper'>
+    
+
+        <div id='header' class='text-center mb-3'>
+            <h1>Your cart has _ items!</h1>
+        </div>
+
+        <div class='text-center'>
+            <i class="fab fa-cc-visa fa-3x mr-3"></i>
+            <i class="fab fa-cc-mastercard fa-3x mr-3"></i>
+            <i class="fab fa-cc-amex fa-3x mr-3"></i>
+            <i class="fab fa-cc-discover fa-3x mr-3"></i>
+        </div>
+
+        <h5>
+            Billing Info</h4>
+
+            <hr>
+
+            <div class='form-group mb-1'>
+                <label class='mb-1' for='firstName'>First Name</label>
+                <input class='form-control mb-1' id='firstName' type='text' placeholder='Your name...'>
+            </div>
+
+            <div class='form-group mb-1'>
+                <label class='mb-1' for='lastName'>Last Name</label>
+                <input id='lastName' type='text' class='form-control' placeholder='Your last name...'>
+            </div>
+
+            <div class='form-group mb-1'>
+                <label class='mb-1'>Street</label>
+                <input class='form-control' type='text' id='street1' placeholder='Your street...'>
+            </div>
+
+            <div class='form-group mb-1'>
+                <label class='mb-1' for='city'>City</label>
+                <input type='text' id='city' class='form-control' placeholder='Your city...'>
+            </div>
+
+                <div class='col-md-4'>
+
+                    <label class='mb-1' for='zip'>Zip</label>
+                    <input type='text' id='zip' class='form-control' placeholder='Your zip...'>
+                </div>
+            </div>
+
+            <h5>
+                Card Info</h4>
+
+                <hr class='mb-1'>
+
+                <div class='form-group mb-1'>
+                    <label class='mb-1' for='nameOnCard'>Name on card</label>
+                    <input class='form-control' id='nameOnCard'
+                </div>
+
+                <div class='form-group mb-1'>
+                    <label class='mb-1' for='cardNum'>Card number</label>
+                    <input class='form-control' id='cardNum'
+                </div>
+
+                <div class='form-row mb-1'>
+                    <div class='col'>
+                        <label class='mb-0' for='expMonth'>Expiration Month</label>
+                        <select class='form-control' id='expMonth'>
+                            <option value='01'>Jan</option>
+                            <option value='02'>Feb</option>
+                            <option value='03'>March</option>
+                            <option value='04'>April</option>
+                            <option value='05'>May</option>
+                            <option value='06'>June</option>
+                            <option value='07'>July</option>
+                            <option value='08'>Aug</option>
+                            <option value='09'>Sept</option>
+                            <option value='10'>Oct</option>
+                            <option value='11'>Nov</option>
+                            <option value='12'>Dec</option>
+                        </select>
+                    </div>
+                    <div class='col'>
+                        <label class='mb-0' for='expYear'>Exp Year</label>
+                        <select class='form-control' id='expYear'>
+                            <option value='2023'>2024</option>
+                            <option value='2023'>2025</option>
+                            <option value='2023'>2026</option>
+                            <option value='2023'>2027</option>
+                            <option value='2023'>2028</option>
+                        </select>
+                    </div>
+                    <div class='col'>
+                        <label class='mb-0' for='ccv'>CCV</label>
+                        <input class='form-control' id='ccv'>
+                    </div>
+                    <button class='btn btn-primary mt-4' type='submit'><i class="fas fa-lock mr-2"></i>Submit Payment</button>
+                </div>
+    
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
