--- a/AbstraxArtStore/Views/Home/Privacy.cshtml
+++ b/AbstraxArtStore/Views/Home/Privacy.cshtml
@@ -2,5 +2,5 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <p>Information about privacy will be placed here, ensuring safety of data, privacy and copyirght laws.</p>
