--- a/AbstraxArtStore/Views/Home/Sell.cshtml
+++ b/AbstraxArtStore/Views/Home/Sell.cshtml
@@ -2,5 +2,6 @@
     ViewData["Title"] = "Sell Paintings";
 }
 <h1>@ViewData["Title"]</h1>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <p>The place to put up a listing and sell your own products will be located here.</p>
