--- a/AbstraxArtStore/Views/Shared/_Layout.cshtml
+++ b/AbstraxArtStore/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="~/AbstraxArtStore.styles.css" asp-append-version="true" />
 </head>
 
+
+
 <body>
     <header>
         <div style="width: 100%" class="container">
@@ -20,8 +22,6 @@
             <input class="search-input" type="search" placeholder="Search"
         </div>
     </form>
-
-
 </div>
 
 
@@ -58,10 +58,13 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Sell">Sell</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="About">About Us</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Cart">Cart</a>
                         </li>
                     </ul>
 
@@ -81,9 +84,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="footer text-muted">
         <div class="container">
-            &copy; 2024 - Abstrax Art - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> - <a asp-area="" asp-controller="Home" asp-action="About">About</a> - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+            &copy; 2024 - Abstrax Art - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> - <a asp-area="" asp-controller="Home" asp-action="About">About Us</a> - <a asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a>
         </div>
     </footer>
 
