--- a/AbstraxArtStore/wwwroot/css/site.css
+++ b/AbstraxArtStore/wwwroot/css/site.css
@@ -20,6 +20,7 @@ html {
 
 body {
     margin-bottom: 60px;
+
 }
 
 .container {
@@ -126,7 +127,6 @@ body {
 .column {
     float: left;
     width: 33.33%;
-    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
     padding: 15px;
 }
 
@@ -136,16 +136,12 @@ body {
     clear: both;
 }
 
-
 @media screen and (max-width:600px) {
     .column {
         width: 100%;
     }
 
-
-
-
-    .footer {
+.footer {
         background-color: white;
         text-align: center;
         padding: 10px;
@@ -209,3 +205,56 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+
+    #form-wrapper {
+        background-color: white;
+        margin: auto;
+        margin-top: 100px;
+        width: 600px;
+        height: auto;
+        padding: 20px;
+        border-radius: 12px;
+        border: 1px solid lightgray;
+    }
+
+    #header {
+        background-color: #000000;
+        border-radius: 10px 10px 0px 0px;
+        border: lightgray solid 1px;
+    }
+
+    h1 {
+        color: white;
+    }
+    
+    h5 {
+        color: white;
+    }
+
+    i {
+        color: white;
+    }
+
+    button i {
+        color: white;
+    }
+
+    hr {
+        border-color: white;
+    }
+
+    button {
+        background-color: white !important;
+    }
+
+    select {
+        display: inline;
+    }
