--- a/AbstraxArtStore/Views/Carts/Index.cshtml
+++ b/AbstraxArtStore/Views/Carts/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Carts</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -12,9 +12,6 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderId)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.CartQuantity)
             </th>
@@ -30,9 +27,6 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderId)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CartQuantity)
             </td>
