--- a/AbstraxArtStore/Views/Carts/Create.cshtml
+++ b/AbstraxArtStore/Views/Carts/Create.cshtml
@@ -17,9 +17,9 @@
                 <select asp-for="Order_Id" class ="form-control" asp-items="ViewBag.Order_Id"></select>
             </div>
             <div class="form-group">
-                <label asp-for="CartQuantity" class="control-label"></label>
-                <input asp-for="CartQuantity" class="form-control" />
-                <span asp-validation-for="CartQuantity" class="text-danger"></span>
+                <label asp-for="FullName" class="control-label"></label>
+                <input asp-for="FullName" class="form-control" />
+                <span asp-validation-for="FullName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="quantity" class="control-label"></label>
