--- a/AbstraxArtStore/Views/Carts/Edit.cshtml
+++ b/AbstraxArtStore/Views/Carts/Edit.cshtml
@@ -19,9 +19,9 @@
                 <span asp-validation-for="Order_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CartQuantity" class="control-label"></label>
-                <input asp-for="CartQuantity" class="form-control" />
-                <span asp-validation-for="CartQuantity" class="text-danger"></span>
+                <label asp-for="FullName" class="control-label"></label>
+                <input asp-for="FullName" class="form-control" />
+                <span asp-validation-for="FullName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="quantity" class="control-label"></label>
