--- a/AbstraxArtStore/Views/Payments/Create.cshtml
+++ b/AbstraxArtStore/Views/Payments/Create.cshtml
@@ -27,8 +27,8 @@
                 <span asp-validation-for="PaymentMethod" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PaymentDate" class="control-label"></label>
-                <input asp-for="PaymentDate" class="form-control" />
+                <label type="hidden" class="col-md-4 control-label">@Html.DisplayFor(Model => Model.PaymentDate)</label>
+                <input type="hidden" id="lname" name="lname" value="@DateTime.Now.ToString("yyyy-MM-dd")"><br><br>
                 <span asp-validation-for="PaymentDate" class="text-danger"></span>
             </div>
             <div class="form-group">
